--- a/package.json
+++ b/package.json
@@ -10,21 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@mapbox/polyline": "^1.2.1",
     "@react-leaflet/core": "^2.1.0",
-    "animate.css": "^4.1.1",
     "antd": "^5.21.1",
     "axios": "^1.7.7",
     "firebase": "^10.13.2",
     "leaflet": "^1.9.4",
-    "polyline-encoded": "^0.0.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.26.2",
-    "react-toastify": "^10.0.5",
-    "swiper": "^11.1.14",
-    "wowjs": "^1.1.3"
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
