--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "animate.css": "^4.1.1",
     "antd": "^5.21.1",
     "axios": "^1.7.7",
+    "boxicons": "^2.1.4",
     "firebase": "^10.13.2",
     "leaflet": "^1.9.4",
     "polyline-encoded": "^0.0.9",
