--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
     "@mapbox/polyline": "^1.2.1",
     "@react-leaflet/core": "^2.1.0",
     "animate.css": "^4.1.1",
