--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@reduxjs/toolkit": "^2.2.7",
     "antd": "^5.21.1",
     "axios": "^1.7.7",
+    "boxicons": "^2.1.4",
     "firebase": "^10.13.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-toastify": "^10.0.5",
+    "recharts": "^2.12.7",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
