--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-leaflet/core": "^2.1.0",
     "@reduxjs/toolkit": "^2.2.7",
     "antd": "^5.21.1",
+    "antd-style": "^3.7.0",
     "axios": "^1.7.7",
     "boxicons": "^2.1.4",
     "firebase": "^10.13.2",
