--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.7.7",
     "boxicons": "^2.1.4",
     "firebase": "^10.13.2",
+    "framer-motion": "^11.11.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
