--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "antd-style": "^3.7.0",
     "axios": "^1.7.7",
     "boxicons": "^2.1.4",
+    "chart.js": "^4.4.5",
     "firebase": "^10.13.2",
     "framer-motion": "^11.11.9",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
