--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
+    "@react-spring/web": "^9.7.5",
     "@reduxjs/toolkit": "^2.2.7",
     "antd": "^5.21.1",
     "antd-style": "^3.7.0",
