--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^5.5.1",
     "@react-spring/web": "^9.7.5",
     "@reduxjs/toolkit": "^2.2.7",
+    "animate.css": "^4.1.1",
     "antd": "^5.21.1",
     "antd-style": "^3.7.0",
     "axios": "^1.7.7",
