--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "react-router-dom": "^6.27.0",
     "react-toastify": "^10.0.5",
     "recharts": "^2.12.7",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
